Fix bars' text on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,18 @@ h2, .continent-chooser {
     .continent-chooser h3 {
         padding: 0 2px 10px;
     }
+    .tick {
+        display: none;
+    }
+    #bar-chart .bar text {
+        font-size: 0.8rem !important;
+    }
+}
+
+@media(max-width:1023px){
+    #bar-chart .bar text {
+        font-size: 0.9rem !important;
+    }
 }
 
 .continent-chooser h3.active {
